--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -13,6 +13,7 @@
   position: absolute;
   top: 29px;
   right: $padding-content;
+  z-index: 12;
 
   display: none;
 
@@ -94,16 +95,25 @@
 }
 
 @media (max-width: $width-tablet - 1) {
-  .main-nav--closed .main-nav__toggle {
-    display: block;
+  .main-nav--opened {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
 
-    @include background-image("../img/icon-menu-open.svg", 0, 3px, transparent);
+    width: 100%;
   }
 
   .main-nav--opened .main-nav__toggle {
     display: block;
 
     @include background-image("../img/icon-menu-close.svg", 0, 0, transparent);
+  }
+
+  .main-nav--closed .main-nav__toggle {
+    display: block;
+
+    @include background-image("../img/icon-menu-open.svg", 0, 3px, transparent);
   }
 
   .main-nav--closed .main-nav__item {
