--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,4 +1,6 @@
 .contacts {
+  position: relative;
+
   padding-bottom: 39px;
 }
 
@@ -7,6 +9,10 @@
   padding-right: $padding-content;
   padding-bottom: 8px;
   padding-left: $padding-content;
+}
+
+.contacts__wrapper::before {
+  @include top-zigzag;
 }
 
 .contacts__title {
@@ -63,11 +69,38 @@
 }
 
 .contacts__map {
+  position: relative;
+
   display: flex;
-  justify-content: center;
 
   height: 457px;
   margin-bottom: 39px;
+}
+
+.contacts__map picture {
+  display: flex;
+  justify-content: center;
+
+  width: 100%;
+
+  &::before {
+    content: "";
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    @include background-image("../img/icon-map-pin.svg", calc(50% + 10px), calc(50% - 34px));
+    background-size: 67px 100px;
+  }
+}
+
+.contacts__map img {
+  width: auto;
+  height: 457px;
 }
 
 .contacts__btn {
