--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,4 +1,7 @@
 .main-header__top {
+  position: relative;
+  z-index: 2;
+
   box-sizing: border-box;
   min-height: 79px;
 
@@ -20,6 +23,12 @@
   &:active[href] {
     opacity: 0.3;
   }
+
+  picture {
+    display: flex;
+
+    width: 100%;
+  }
 }
 
 .main-header__logo-image {
@@ -29,17 +38,24 @@
 }
 
 .main-header__bottom {
+  position: relative;
+
   box-sizing: border-box;
   min-height: 177px;
   padding-right: $padding-content;
   padding-left: $padding-content;
 
   background-color: $color-bg-secondary;
+}
 
-  &--image {
-    min-height: 283px;
+.main-header__bottom--image {
+  min-height: 283px;
 
-    @include background-image("../img/hero-mobile@1x.jpg", 50%, -17px, #f9f9f9);
+  @include background-image("../img/hero-mobile@1x.jpg", 50%, -17px, #f9f9f9);
+  background-size: auto 373px;
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/hero-mobile@2x.jpg");
   }
 }
 
@@ -74,8 +90,32 @@
     box-shadow: inset 0 1px 0 0 #e7e7e7;
   }
 
+  .main-header__bottom::after {
+    content: "";
+
+    position: absolute;
+    bottom: -12px;
+    left: 0;
+    z-index: 10;
+
+    width: 100%;
+    height: 24px;
+
+    background-image: url("../img/bg-zigzag-fill.svg");
+    background-position: top center;
+    background-size: 768px 24px;
+    background-repeat: repeat-x;
+  }
+
   .main-header__bottom--image {
     min-height: 746px;
+
+    @include background-image("../img/hero-tablet@1x.jpg", center, top);
+    background-size: auto 746px;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/hero-tablet@2x.jpg");
+    }
   }
 
   .main-header__delivery {
@@ -123,6 +163,22 @@
   .main-header__bottom:not(.main-header__bottom--image) {
     min-height: 255px;
     padding: 0;
+  }
+
+  .main-header__bottom::after {
+    bottom: -19px;
+
+    height: 36px;
+
+    background-size: 1150px 36px;
+  }
+
+  .main-header__bottom--image::after {
+    bottom: -19px;
+
+    height: 37px;
+
+    background-size: 1250px 37px;
   }
 
   .main-header__delivery {
