--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -18,6 +18,8 @@
   img {
     display: block;
 
+    width: 260px;
+    height: auto;
     margin: 0 auto;
   }
 }
@@ -87,7 +89,20 @@
   margin-top: 1px;
   margin-right: -1px;
 
-  background-color: #cccccc; //TMP
+  outline: none;
+
+  path {
+    fill: #d3d2d2;
+  }
+
+  &:hover path,
+  &:focus path {
+    fill: $color-primary;
+  }
+
+  &:active path {
+    fill: rgba($color-primary, 0.3);
+  }
 }
 
 @media (min-width: $width-tablet) {
@@ -100,6 +115,11 @@
   .product__photo {
     width: 50%;
     min-height: 334px;
+
+    img {
+      width: 334px;
+      height: auto;
+    }
   }
 
   .product__info {
@@ -148,6 +168,11 @@
   .product__photo {
     width: 100%;
     height: 462px;
+
+    img {
+      width: 316px;
+      height: auto;
+    }
   }
 
   .product__top {
