--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,6 +3,8 @@ $width-tablet: 768px;
 $width-desktop: 1250px;
 $width-desktop-content: 1050px;
 
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
 
 $padding-content: 30px / $width-mobile * 100%;
 $padding-content-tablet: 50px / $width-tablet * 100%;
