--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -77,6 +77,16 @@
   margin-bottom: 39px;
 }
 
+.contacts__map iframe {
+  position: absolute;
+  z-index: 10;
+
+  width: 100%;
+  height: 100%;
+
+  border: none;
+}
+
 .contacts__map picture {
   display: flex;
   justify-content: center;
