--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -34,7 +34,7 @@
 .main-header__logo-image {
   width: 86px;
   height: 35px;
-  margin: auto;
+  margin: 22px auto;
 }
 
 .main-header__bottom {
@@ -158,6 +158,7 @@
   .main-header__logo-image {
     width: 149px;
     height: 72px;
+    margin-top: 10px;
   }
 
   .main-header__bottom {
