--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -103,7 +103,7 @@
     width: 100%;
     height: 100%;
 
-    @include background-image("../img/icon-map-pin.svg", calc(50% + 10px), calc(50% - 34px));
+    @include background-image("../img/map-pin.svg", calc(50% + 10px), calc(50% - 34px));
     background-size: 67px 100px;
   }
 }
@@ -150,7 +150,7 @@
       width: 47px;
       height: 81px;
 
-      @include background-image("../img/icon-flag.svg", 0, 0);
+      @include background-image("../img/flag.svg", 0, 0);
     }
   }
 
