--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -40,7 +40,7 @@
     width: 32px;
     height: 32px;
 
-    @include background-image("../img/icon-video.svg", 0, 0);
+    @include background-image("../img/video.svg", 0, 0);
   }
 }
 
@@ -69,7 +69,7 @@
   height: 100%;
   padding: 0;
 
-  @include background-image("../img/icon-play.svg", center, center, transparent);
+  @include background-image("../img/play.svg", center, center, transparent);
   background-size: 101px 77px;
   border: 0;
   outline: none;
