--- a/source/sass/blocks/order-form.scss
+++ b/source/sass/blocks/order-form.scss
@@ -119,7 +119,7 @@
     width: 22px;
     height: 16px;
 
-    @include background-image("../img/icon-tick.svg", 0, 0);
+    @include background-image("../img/tick.svg", 0, 0);
     background-size: 22px 16px;
   }
 }
