Fix svg icon styles

--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -9,11 +9,9 @@
 
   outline: none;
 
-  path {
-    fill: $color-primary;
-  }
+  fill: $color-primary;
 
-  &:hover path {
+  &:hover {
     fill: $color-interactive-secondary;
   }
 
