--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -68,28 +68,22 @@
   top: 31px;
   left: $padding-content;
 
+  fill: rgba(#231f20, 0.2);
+
   &--search {
     top: 32px;
 
     margin-left: 2px;
   }
-
-  path {
-    fill: rgba(#231f20, 0.2);
-  }
 }
 
-.main-nav__link[href]:hover {
-  path {
-    fill: $color-primary;
-  }
+.main-nav__link[href]:hover .main-nav__icon {
+  fill: $color-primary;
 }
 
-.main-nav__link[href]:focus,
-.main-nav__link[href]:active {
-  path {
-    fill: rgba($color-primary, 0.3);
-  }
+.main-nav__link[href]:focus .main-nav__icon,
+.main-nav__link[href]:active .main-nav__icon {
+  fill: rgba($color-primary, 0.3);
 }
 
 @media (max-width: $width-tablet - 1) {
