--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -15,6 +15,7 @@
   background-color: $color-bg-primary;
   border: 2px solid $color-btn;
   outline: none;
+  cursor: pointer;
 
   &:hover,
   &:focus {
