--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -15,7 +15,11 @@
 }
 
 .main-footer__social {
+  box-sizing: border-box;
   min-height: 80px;
+  padding-top: 20px;
+  padding-right: 5px;
+  padding-bottom: 20px;
 }
 
 .main-footer__copyright {
@@ -67,6 +71,8 @@
   .main-footer__social {
     width: 30%;
     min-height: 40px;
+    padding-top: 0;
+    padding-bottom: 40px;
   }
 
   .main-footer__copyright {
