--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -2,6 +2,7 @@
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src:
     local("Open Sans Regular"),
     local("OpenSans-Regular"),
@@ -13,6 +14,7 @@
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src:
     local("Open Sans Bold"),
     local("OpenSans-Bold"),
