--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -3,7 +3,7 @@
 
   box-sizing: border-box;
   min-height: 52px;
-  padding: 15px 0 0;
+  padding: 15px 10px 13px;
 
   @include font-set($text-important, $lh-dense, $weight-bold);
   font-family: inherit;
