--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -2,8 +2,7 @@
   display: block;
 
   box-sizing: border-box;
-  min-height: 52px;
-  padding: 15px 10px 13px;
+  padding: 14px 10px;
 
   @include font-set($text-important, $lh-dense, $weight-bold);
   font-family: inherit;
