--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -49,7 +49,8 @@
 
 .modal__btn {
   width: 100%;
-  padding: 0;
+  padding-top: 16px;
+  padding-bottom: 16px;
 
   line-height: 16px;
   color: $color-contrast;
